[package]
name = "imgui-opengl-renderer"
description = "An OpenGL renderer for imgui-rs"
version = "0.6.0"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
build = "build.rs"
homepage = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
repository = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
readme = "README.md"
categories = ["gui", "rendering::graphics-api"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "michaelfairley/rust-imgui-opengl-renderer" }

[dependencies]
imgui = "0.2"

[build-dependencies]
gl_generator = "0.9.0"
